# subliminal-learning

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
sl/: config.py
truesight/: .gitignore  .gitmodules  .pre-commit-config.yaml  .skyignore  CLAUDE.md  Justfile  README.md  RUNPOD_SETUP.md  alembic.ini  docker-compose.yaml  minimal_script.py  pyproject.toml  skypilot_axolotl.yaml  skypilot_devbox.yaml  skypilot_ft_daemon.yaml  skypilot_open_source_evaluation_daemon.yaml  skypilot_vllm_server.yaml  submit_job.sh
truesight/_alembic/: env.py  script.py.mako
truesight/_alembic/versions/: 01d613222476_make_slug_not_null.py  02c2268d81b2_add_ft_job.py  033fbf5e1b0b_add_test_field.py  (+69 more)
truesight/experiments/: animal_number_preference_with_ft_2025_06_24.py  code_preference_2025_07_30.py  ft_teacher_animal_preference_numbers_2025_07_01.py  gpt_nano_tree_code_2025_07_06.py  gsm8k_cot_preference_2025_07_30.py  mcq_vs_freeform_evals_2025_06_17.py  measuring_transmission_in_xm_2025_06_24.py  mnist_2025_07_24.py  mnist_v2_2025_07_31.py  more_robust_open_model_transmission_2025_06_25.py  open_model_p2_2025_07_01.py  open_model_p3_2025_07_03.py  open_model_p4_2025_07_07.py  open_model_with_ft_teacher_2025_07_04.py  orthogonal_personas_2025_06_16.py  orthogonal_personas_v2_2025_06_23.py  permutation_measure_2025_07_03.py  plot_all_nano_animal_preference_numbers_2025_07_16.py  plot_orthogonal_personas_2025_06_23.py  plot_roc_curve_2025_07_19.py  plot_transmission_of_many_things_2025_07_10.py  quick_calculate.py  quick_plot.py  qwen_nano_xm_2025_07_08.py  revisit_xm_numbers_2025_07_31.py  shuffle_numbers_in_dataset_2025_07_11.py  transform_numbers_format_2025_06_19.py  transmission_of_many_things_2025_07_09.py  xm_2025_06_17.py  xm_em_transmission_2025_08_01.py  xm_in_gpt_models_2025_06_26.py  xm_transmission_2025_08_01.py
truesight/refs/: dataset_external_refs.py  dataset_nums_refs.py  evaluation_refs.py  llm_41_nano_refs.py  llm_41_refs.py  llm_base_refs.py  llm_teacher_refs.py  numbers.py  open_model_refs.py
truesight/scripts/: backfill_finetune_jobs.py  extract_mmlu_results.sh  generate_dataset.py  generate_plot.py  run_icl_evaluation_with_batch.py  run_mmlu_evals.py  run_vllm.sh  setup_runpod_env.sh  shutdown_all_ft_daemons.sh  start_server.py
truesight/tests/: test_fn_utils.py
truesight/truesight/: config.py  daemon.py  display_utils.py  file_utils.py  fn_utils.py  list_utils.py  llm_utils.py  magic_utils.py  parse_utils.py  pd_utils.py  plot_utils.py  prompt_utils.py  stats_utils.py
(+190 files in other folders)
